
public class Main {


    public static void main(String[] args) {
        //todo: change to instantiation of Game class
        Game game = new Game(6);
        game.setup();

        //todo:  call game.setup() - a method you will add to the Game class that
        // a. loads or prompts for gamedata,
        // b. creates the model.Player objects
        // (reuse the code beneath)






    }
}