@startuml
!pragma layout smetana

'https://plantuml.com/class-diagram

class Main
class Game

package "util"{
class TextUI
class FileIO
}
package "model"{
class Player
class Account
}
Main *-- Game
Game *-- TextUI
Game *-- FileIO
Game *-- Player
Player *-- Account

Main : + static void main(string [] args)

Player : -int id
Player  : -String name
Player  : -Account account
Player  : -{static} int counter
Player  : +Player(String name)
Player  : +int getId()
Player  : +String getName()
Player  : +String toString()
Player  : +int getBalance()

Account : - int balance
Account : + Account()
Account : + int getBalance()
Account : + void setBalance(int amount)
Account : + void updateBalance(int amount)

Game : - ArrayList<Player> players
Game : - int maxPlayers
Game : - TextUI ui
Game : - FileIO io
Game : - Player currentplayer
Game : + Game(int maxPlayers, int minPlayers)
Game : - void registerPlayer(String name, int amount)
Game : + void setup()
Game : - void runPlayerSetupDialog();
Game : - void runGameLoop()
Game : - void throwAndMove()
Game : - void endGame()
Game : - void displayPlayers()
Game : - Player getPlayer(int i)
Game : - ArrayList<Player> getPlayers()

TextUI : + String getInput(String msg)
TextUI : - Scanner scanner
TextUI : + void displayMessage(String msg)

FileIO : - Scanner scanner
FileIO : - File file
FileIO : + readGameData(String path)
FileIO : + void saveData(String path, ArrayList<Player> players)

@enduml